# s3-browser

./: .gitignore  README.md  Region自动识别说明.md  next.config.ts  package-lock.json  package.json  使用指南.md  未找到存储桶-解决方案.md  桶列表调试指南.md  登录记忆功能说明.md  诊断脚本.md  连接问题排查.md
main/: main.js  preload.js  transfer-manager.js
public/: debug.html  raw-data.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/s3/: route.ts
src/app/explorer/: page.tsx
src/components/: FileTable.tsx  TransferManager.tsx
src/components/ui/: Toast.tsx
src/lib/: api.ts  credentials.ts  desktop.ts  s3-client.ts  utils.ts
src/types/: electron.d.ts  s3.ts
