[package]
name = "s3-browser"
version = "0.2.0"
description = "Lightweight S3 and Huawei OBS desktop client"
authors = ["seldoms"]
edition = "2021"

[lib]
name = "s3_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aws-sdk-s3 = "1"
aws-smithy-async = "1"
aws-smithy-types = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[profile.release]
strip = true
panic = "abort"
codegen-units = 1
lto = true
